added github link

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
     <div class="jumbotron">
         <h1 class="display-4">MNIST Handwritten Digit Classifier</h1>
         <p class="lead">This is a simple ML web app.</p>
+        <a href="https://github.com/louiewhw/mnist_web_app">View Code on Github</a>
         <hr class="my-4">
     </div>
 
